--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vee-validate": "^3.4.13"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "node-sass": "^6.0.1",
+    "nuxt-vite": "^0.2.4",
+    "sass": "^1.39.2",
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0"
+  }
 }
