--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "v-click-outside": "^3.1.2",
     "vee-validate": "^3.4.13"
   },
   "devDependencies": {
