--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
+    "detect-inapp": "^1.4.0",
     "nuxt": "^2.15.7",
     "v-click-outside": "^3.1.2",
     "vee-validate": "^3.4.13"
